--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx": "^3.5.1",
+    "mobx-react": "^4.4.2",
+    "native-base": "^2.3.9",
     "react": "16.2.0",
-    "react-native": "0.53.3"
+    "react-native": "0.53.3",
+    "react-navigation": "^1.1.2"
   },
   "devDependencies": {
     "babel-jest": "22.4.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.0",
     "react-test-renderer": "16.2.0"
